[gd_scene load_steps=9 format=3 uid="uid://cwakr1joaem2j"]

[ext_resource type="Script" path="res://WorldNodes/dungeon_ui.gd" id="1_wy0uv"]
[ext_resource type="StyleBox" uid="uid://jqa8dgagawo1" path="res://Resources/SkillBarBoxStyle.tres" id="2_0cgky"]
[ext_resource type="PackedScene" uid="uid://7x5e7cauhthd" path="res://Dungeon-UI/LookCreatureInfoPanel.tscn" id="3_fnthc"]
[ext_resource type="LabelSettings" uid="uid://df882tsfd50yb" path="res://Resources/Fonts/LabelSettingYellowHeaderFont.tres" id="3_j6j3s"]
[ext_resource type="PackedScene" uid="uid://dkaqqpg8dxhsq" path="res://Dungeon-UI/skill_bar_box.tscn" id="3_j24mf"]
[ext_resource type="Theme" uid="uid://dnmve288k8de2" path="res://Resources/Fonts/BasicSmallPixelFont.tres" id="4_4h5xh"]
[ext_resource type="PackedScene" uid="uid://bbx4lxn5g5ryb" path="res://Dungeon-UI/basic_log.tscn" id="4_e6hou"]
[ext_resource type="Texture2D" uid="uid://dgf0gnmb68l05" path="res://Sprites/loading-screen-temp.png" id="5_farj6"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_wy0uv")

[node name="LookMargin" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="LookMargin"]
layout_mode = 2

[node name="FloorInfo" type="PanelContainer" parent="LookMargin/VBox"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_0cgky")

[node name="Margin" type="MarginContainer" parent="LookMargin/VBox/FloorInfo"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Hbox" type="VBoxContainer" parent="LookMargin/VBox/FloorInfo/Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FloorLabel" type="Label" parent="LookMargin/VBox/FloorInfo/Margin/Hbox"]
layout_mode = 2
text = "Dungeon floor num"
label_settings = ExtResource("3_j6j3s")

[node name="GoldLabel" type="Label" parent="LookMargin/VBox/FloorInfo/Margin/Hbox"]
layout_mode = 2
theme = ExtResource("4_4h5xh")
text = "Gold: Amount"

[node name="EnemiesLabel" type="Label" parent="LookMargin/VBox/FloorInfo/Margin/Hbox"]
layout_mode = 2
theme = ExtResource("4_4h5xh")
text = "Enemies killed: Amount"

[node name="PlayerPanel" parent="LookMargin/VBox" instance=ExtResource("3_fnthc")]
layout_mode = 2

[node name="LookPanel" parent="LookMargin/VBox" instance=ExtResource("3_fnthc")]
layout_mode = 2

[node name="LoadingImage" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 3
texture = ExtResource("5_farj6")
expand_mode = 1

[node name="BottomPanel" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -172.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("2_0cgky")

[node name="Hbox" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LogMargin" type="MarginContainer" parent="BottomPanel/Hbox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="LogPanel" type="PanelContainer" parent="BottomPanel/Hbox/LogMargin"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_0cgky")

[node name="MarginContainer" type="MarginContainer" parent="BottomPanel/Hbox/LogMargin/LogPanel"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CombatLog" parent="BottomPanel/Hbox/LogMargin/LogPanel/MarginContainer" instance=ExtResource("4_e6hou")]
layout_mode = 2

[node name="SkillsMargin" type="MarginContainer" parent="BottomPanel/Hbox"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_bottom = 15

[node name="SkillBar" type="HBoxContainer" parent="BottomPanel/Hbox/SkillsMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SkillBarBox" parent="BottomPanel/Hbox/SkillsMargin/SkillBar" instance=ExtResource("3_j24mf")]
layout_mode = 2

[node name="SkillBarBox2" parent="BottomPanel/Hbox/SkillsMargin/SkillBar" instance=ExtResource("3_j24mf")]
layout_mode = 2

[node name="SkillBarBox3" parent="BottomPanel/Hbox/SkillsMargin/SkillBar" instance=ExtResource("3_j24mf")]
layout_mode = 2

[node name="SkillBarBox4" parent="BottomPanel/Hbox/SkillsMargin/SkillBar" instance=ExtResource("3_j24mf")]
layout_mode = 2

[node name="HelpScreen" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -52.5
offset_right = 114.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_0cgky")

[node name="Margin" type="MarginContainer" parent="HelpScreen"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Hbox" type="VBoxContainer" parent="HelpScreen/Margin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HelpHeader" type="Label" parent="HelpScreen/Margin/Hbox"]
layout_mode = 2
text = "Help & Keys"
label_settings = ExtResource("3_j6j3s")

[node name="HelpLabel1" type="Label" parent="HelpScreen/Margin/Hbox"]
layout_mode = 2
theme = ExtResource("4_4h5xh")
text = "Move  -  Arrows/Numpad"

[node name="HelpLabel2" type="Label" parent="HelpScreen/Margin/Hbox"]
layout_mode = 2
theme = ExtResource("4_4h5xh")
text = "Skills  -  Number keys"

[node name="HelpLabel3" type="Label" parent="HelpScreen/Margin/Hbox"]
layout_mode = 2
theme = ExtResource("4_4h5xh")
text = "Switch enemy  -  R"

[node name="HelpLabel4" type="Label" parent="HelpScreen/Margin/Hbox"]
layout_mode = 2
theme = ExtResource("4_4h5xh")
text = "Open/close Help  -  H"
